--- a/_posts/2015-06-05-fiat-lux.md
+++ b/_posts/2015-06-05-fiat-lux.md
@@ -31,7 +31,7 @@ I measured the voltage across the filament and the current passing through it at
 |1.68        |88           |19.1              |
 |2.09        |99           |21.1              |
 
-At 2.1 V, the filament was visibly glowing in ambient light, so I stopped bumping the voltage.  Dialing the voltage back to 1.5V resulted in a faint glow in a dark room.  That seems like a reasonable level to run at for the time being.
+At 2.1 V, the filament was visibly glowing in ambient light, so I stopped bumping the voltage.  Dialing the voltage back to 1.5V resulted in a faint glow in a dark room.  That seems like a reasonable level for now.
 
 I'm running that logic at 5V, and a little math indicated that I needed a 42 ohm resistor to hit my target voltage drop across the filament.  A 47 ohm and 330 ohm resistor in parallel give me ~41 ohms.  Close enough.
 
@@ -43,15 +43,16 @@ I was careful to pick a voltage regulator that would run on voltages in the volt
 
 With all of this experimentation, I have a few loose ends to tie up as far as design for the final clock goes:
 
-* I'm actually dissipating .26 W from the 47 ohm resistor.  I'm just going to live with this while it's on the breadboard, but I'll need to do something on the final clock.
+* The 1/4 W 47 ohm resistor is actually dissipating .26 W in this configuration.  I'm just going to live with this while it's on the breadboard, but I'll need to do something on the final clock.
 * The DC voltage regulator I'm using is good to supply 500mA.  84 mA / tube * 4 tubes = 336 mA just to run the filaments if I run them all in parallel.
 
 Possible options for the final clock:
 
 * Maybe 164 mA will be enough to run the MCU and other logic?
+* If I'm just shy, maybe drop the filament voltage a bit?
 * Put in a second DC regulator and run two filaments on each regulator.
 * Run the filaments in two parallel circuits of two tubes and 12 ohms of resistance each.
 
-The first two options will require a 1/2 W 47 ohm resistor instead of the 1/4 W ones I'm using now.  I'll be curious to see if the last option results in a visible difference in brightness between the two tubes in series.
+The first three options will require a 1/2 W 47 ohm resistor instead of the 1/4 W ones I'm using now.  I'll be curious to see if the last option results in a visible difference in brightness between the two tubes in series.  For just one tube, I don't see any.
 
 
