--- a/_posts/2015-06-05-fiat-lux.md
+++ b/_posts/2015-06-05-fiat-lux.md
@@ -39,7 +39,7 @@ With all of the confidence in my calculations that having taken physics 122 a do
 
 I was careful to pick a voltage regulator that would run on voltages in the voltage range required by the anodes and girds.  The one I have will happily run on 8V to 28V, so I was free to try that range to light up the VFD.  At 12V, they look nice, at 24V, they're quite bright.
 
-![NEC LD8113 vacuum fluorescent display tube 12V/24V comparison](/images/nec-ld8113-12v-24v-sm.jpg "The background is darker because I took the pictures at -0.7 EV.  At +0 EV, the 24V picture was too bright.")
+![NEC LD8113 vacuum fluorescent display tube 12V/24V comparison](/images/nec-ld8113-12v-24v-sm.jpg "The background is darker because I took the pictures at -0.7 EV.  At +0 EV the 24V picture was too bright.")
 
 With all of this experimentation, I have a few loose ends to tie up as far as design for the final clock goes:
 
